--- a/helm-chart/my-backend/values.yaml
+++ b/helm-chart/my-backend/values.yaml
@@ -158,7 +158,9 @@ fileSecret:
 # =========================
 pvc:
   enabled: false
-
+  
+serviceAccount:
+  create: false
 
 nodeSelector: {}
 tolerations: []
