--- a/helm-chart/my-frontend/templates/deployment.yaml
+++ b/helm-chart/my-frontend/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ include "my-frontend.fullname" . }}
   labels:
     {{- include "my-frontend.labels" . | nindent 4 }}
 spec:
