--- a/helm-chart/my-frontend/values.yaml
+++ b/helm-chart/my-frontend/values.yaml
@@ -96,7 +96,11 @@ serviceAccount:
   name: ""
 
 nodeSelector: {}
-tolerations: []
+tolerations:
+  - key: "node"
+    operator: "Equal"
+    value: "service"
+    effect: "NoSchedule"
 affinity: {}
 
 imagePullSecrets: []
