--- a/helm-chart/my-frontend/values.yaml
+++ b/helm-chart/my-frontend/values.yaml
@@ -101,7 +101,15 @@ tolerations:
     operator: "Equal"
     value: "service"
     effect: "NoSchedule"
-affinity: {}
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: node-role
+              operator: In
+              values:
+                - service
 
 imagePullSecrets: []
 nameOverride: ""
