--- a/helm-chart/external-dns/values.yaml
+++ b/helm-chart/external-dns/values.yaml
@@ -4,5 +4,7 @@ external-dns:
     name: external-dns-sa
     annotations:
       eks.amazonaws.com/role-arn: arn:aws:iam::880076045111:role/external-dns-sa-role
+  domainFilters:
+    - kimdongju.site 
   serviceMonitor:
     enabled: true
