--- a/helm-chart/mimir/values.yaml
+++ b/helm-chart/mimir/values.yaml
@@ -59,7 +59,7 @@ mimir-distributed:
     enabled: false
 
   metaMonitoring:
-    serviceMonitor: enabled
+    serviceMonitor: true
 
   runtimeConfig:
     overrides:
