--- a/helm-chart/aws-lb-controller/Chart.yaml
+++ b/helm-chart/aws-lb-controller/Chart.yaml
@@ -2,10 +2,10 @@ apiVersion: v2
 name: aws-load-balancer-controller
 description: Umbrella chart for AWS Load Balancer Controller
 version: 0.1.0
-appVersion: v2.13.0
+appVersion: v2.12.0
 type: application
 dependencies:
   - name: aws-load-balancer-controller
     alias: aws-load-balancer-controller
-    version: 1.13.0
+    version: ~1.12.0
     repository: https://aws.github.io/eks-charts
