--- a/helm-chart/external-dns/Chart.yaml
+++ b/helm-chart/external-dns/Chart.yaml
@@ -7,5 +7,5 @@ type: application
 dependencies:
   - name: external-dns
     alias: external-dns
-    version: 1.16.1
+    version: ~1.16.1
     repository: https://kubernetes-sigs.github.io/external-dns
