--- a/helm-chart/loki/values.yaml
+++ b/helm-chart/loki/values.yaml
@@ -3,7 +3,7 @@ loki:
     enabled: true
   serviceAccount:
     create: true
-    name: loki
+    name: loki-sa
     annotations:
       eks.amazonaws.com/role-arn: arn:aws:iam::880076045111:role/loki-sa-role
   loki:
