--- a/helm-chart/mimir/values.yaml
+++ b/helm-chart/mimir/values.yaml
@@ -1,7 +1,7 @@
 mimir-distributed:
   serviceAccount:
     create: true
-    name: mimir
+    name: mimir-sa
     annotations:
       eks.amazonaws.com/role-arn: arn:aws:iam::880076045111:role/mimir-sa-role
 
