--- a/helm-chart/tempo/values.yaml
+++ b/helm-chart/tempo/values.yaml
@@ -5,7 +5,7 @@ tempo:
 
   serviceAccount:
     create: true
-    name: tempo
+    name: tempo-sa
     annotations:
       eks.amazonaws.com/role-arn: arn:aws:iam::880076045111:role/tempo-sa-role
 
