--- a/helm-chart/my-frontend/templates/hpa.yaml
+++ b/helm-chart/my-frontend/templates/hpa.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
-    kind: Deployment
+    kind: Rollout
     name: {{ include "my-frontend.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
