--- a/helm-chart/my-frontend/templates/hpa.yaml
+++ b/helm-chart/my-frontend/templates/hpa.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "my-frontend.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
-    apiVersion: apps/v1
+    apiVersion: argoproj.io/v1alpha1
     kind: Rollout
     name: {{ include "my-frontend.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
