--- a/helm-chart/my-backend/values.yaml
+++ b/helm-chart/my-backend/values.yaml
@@ -97,7 +97,7 @@ ingress:
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:880076045111:certificate/c2541962-fedf-4fb3-bb6b-72eec6191cd3
     alb.ingress.kubernetes.io/ssl-redirect: '443'
     alb.ingress.kubernetes.io/success-codes: '200,302'
-    alb.ingress.kubernetes.io/healthcheck-path: health
+    alb.ingress.kubernetes.io/healthcheck-path: /health
     external-dns.alpha.kubernetes.io/hostname: kimdongju.site
   hosts:
     - host: kimdongju.site
