--- a/helm-chart/my-backend/templates/rollout-canary-preview.yaml
+++ b/helm-chart/my-backend/templates/rollout-canary-preview.yaml
@@ -46,13 +46,13 @@ spec:
           livenessProbe:
             httpGet:
               path: {{ .Values.probes.liveness.path }}
-              port: http
+              port: {{ .Values.container.port }}
           {{- end }}
           {{- if .Values.probes.readiness.enabled }}
           readinessProbe:
             httpGet:
               path: {{ .Values.probes.readiness.path }}
-              port: http
+              port: {{ .Values.container.port }}
           {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
