--- a/helm-chart/my-backend/values.yaml
+++ b/helm-chart/my-backend/values.yaml
@@ -58,10 +58,18 @@ probes:
     enabled: true
     path: /health
     port: 8001
+    initialDelaySeconds: 5
+    periodSeconds: 10
+    timeoutSeconds: 3
+    failureThreshold: 5
   readiness:
     enabled: true
     path: /health
     port: 8001
+    initialDelaySeconds: 5
+    periodSeconds: 10
+    timeoutSeconds: 3
+    failureThreshold: 5
 
 
 metrics:
