--- a/helm-chart/grafana/values.yaml
+++ b/helm-chart/grafana/values.yaml
@@ -8,10 +8,11 @@ grafana:
       kubernetes.io/ingress.class: alb
       alb.ingress.kubernetes.io/scheme: internet-facing
       alb.ingress.kubernetes.io/group.name: platform-alb-group
-      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
-      alb.ingress.kubernetes.io/success-codes: '200'
       alb.ingress.kubernetes.io/target-type: ip
+      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
+      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:880076045111:certificate/c2541962-fedf-4fb3-bb6b-72eec6191cd3
+      alb.ingress.kubernetes.io/ssl-redirect: '443'
+      alb.ingress.kubernetes.io/success-codes: '200'
       external-dns.alpha.kubernetes.io/hostname: grafana.kimdongju.site
-
   persistence:
     enabled: false
